--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "moment": "^2.22.1",
     "npm": "^5.8.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
@@ -11,7 +12,8 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "rmwc": "^1.5.6"
   },
   "devDependencies": {
     "react-scripts": "1.1.4"
